--- a/client/src/Components/Sub-Components/Calendar.css
+++ b/client/src/Components/Sub-Components/Calendar.css
@@ -1,6 +1,6 @@
 .calendarContainer {
     height: 100%;
-    width: 650px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -10,7 +10,7 @@
 
     .calendarMonthContainer {
         height: 10%;
-        width: 628px;
+        width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -157,9 +157,9 @@
             -webkit-user-drag: none;
         }
 
-            .calendar {
+            /* .calendar {
                 width: 100%;
-            }
+            } */
 
             .calendar th {
                 min-height: 40px;
