--- a/client/src/Components/Sub-Components/ProfileBody.css
+++ b/client/src/Components/Sub-Components/ProfileBody.css
@@ -82,7 +82,7 @@
     }
 
         .profileBodyRightIntroContainer {
-            height: 200px;
+            min-height: 200px;
             width: 100%;
             display: flex;
             flex-direction: column;
@@ -98,10 +98,11 @@
                 flex-direction: column;
                 justify-content: flex-start;
                 align-items: flex-start;
+                margin-bottom: 30px;
             }
 
                 .profileBodyRightIntroNameText {
-                    font-size: 26px;
+                    font-size: 30px;
                     font-weight: bold;
                     margin-bottom: 10px;
                 }
@@ -123,6 +124,11 @@
                 .profileBodyRightIntroAboutText {
                     font-size: 20px;
                     font-weight: bold;
+                    margin-bottom: 30px;
+                }
+
+                .profileBodyRightIntroAboutDesc {
+                    font-size: 16px;
                     margin-bottom: 30px;
                 }
 
