--- a/client/src/Components/Sub-Components/HomeHeader.css
+++ b/client/src/Components/Sub-Components/HomeHeader.css
@@ -89,7 +89,7 @@
     width: 350px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     position: absolute;
     left: 210px;
