--- a/client/src/Components/Sub-Components/ListingBody.css
+++ b/client/src/Components/Sub-Components/ListingBody.css
@@ -875,7 +875,7 @@
                 }
 
                 .homeHeader2SearchDropdownGuestsContainer2 {
-                    height: 400px;
+                    height: 414px;
                     width: 310px;
                     display: flex;
                     flex-direction: column;
@@ -908,6 +908,17 @@
                     flex-direction: row;
                     justify-content: space-between;
                     align-items: center;
+                }
+
+                .homeHeader2SearchDropdownGuestContainer4 {
+                    min-height: 14px;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+                    font-size: 12px;
+                    margin-top: 10px;
                 }
 
                     .homeHeader2SearchDropdownGuestContainerLeft2 {
