more frontend progress

--- a/client/src/Components/Pages/Checkout.css
+++ b/client/src/Components/Pages/Checkout.css
@@ -640,6 +640,7 @@
         .checkoutHeaderImage {
             height: 32px;
             width: auto;
+            cursor: pointer;
         }
 
     .bottom {
