--- a/client/src/Components/Pages/HostingDashboard.css
+++ b/client/src/Components/Pages/HostingDashboard.css
@@ -49,6 +49,41 @@
                 border-radius: 50%;
             }
 
+            .homeHeaderProfileDropdownContainer2 {
+                min-height: 180px;
+                width: 200px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                right: 40px;
+                top: 80px;
+                background-color: white;
+                border-radius: 10px;
+                overflow-y: auto;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            }
+
+                .homeHeaderProfileDropdownOption2 {
+                    height: 60px;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                    cursor: pointer;
+                    padding: 10px 20px;
+                }
+
+                .homeHeaderProfileDropdownOption2:hover {
+                    background-color: rgba(172, 172, 172, 0.2);
+                }
+
+                    .homeHeaderProfileDropdownOptionText2 {
+                        font-size: 14px;
+                    }
+
     .hostingDashboardWelcomeContainer {
         height: 200px;
         width: 100%;
