--- a/client/src/Components/Sub-Components/ErrorModal.css
+++ b/client/src/Components/Sub-Components/ErrorModal.css
@@ -1,5 +1,7 @@
 .errorModalBackDrop {
-    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
     min-height: 100vh;
     height: 100%;
     width: 100%;
