frontend backend progress

--- a/client/src/Components/Sub-Components/ImageUpload2.css
+++ b/client/src/Components/Sub-Components/ImageUpload2.css
@@ -54,7 +54,7 @@
             color: white;
             border-radius: 5px;
             padding: 10px 20px;
-            background-color: rgb(255, 123, 152);
+            background-color: var(--black);
             cursor: pointer;
         }
 
