--- a/client/src/Components/Sub-Components/HomeBody.css
+++ b/client/src/Components/Sub-Components/HomeBody.css
@@ -1,9 +1,9 @@
 .homeBodyContainer {
-    min-height: 100vh;
+    min-height: calc(100vh - 260px);
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    place-items: center;
+    place-items: start;
     padding: 0 40px;
     gap: 20px;
     margin-bottom: 20px;
