--- a/client/src/Components/Pages/Login.css
+++ b/client/src/Components/Pages/Login.css
@@ -6,7 +6,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
     z-index: 99;
     background-color: rgba(0, 0, 0, 0.2);
 }
