--- a/client/src/Components/Sub-Components/ListingBody.css
+++ b/client/src/Components/Sub-Components/ListingBody.css
@@ -1285,6 +1285,209 @@
             align-items: center;
         }
 
+        .listingBodyReviewsHeaderContainerLeft {
+            min-height: 100px;
+            min-width: 0%;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+            margin-right: 30px;
+        }
+
+        .createReviewBackdrop {
+            position: fixed;
+            top: 0;
+            left: 0;
+            min-height: 100vh;
+            height: 100%;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(0, 0, 0, 0.4);
+            z-index: 99;
+        }
+
+            .createReviewModal {
+                height: 600px;
+                width: 500px;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: center;
+                padding: 40px;
+                padding-bottom: 10px;
+                z-index: 100;
+                background-color: white;
+                border-radius: 10px;
+            }
+
+                .createReviewTitle {
+                    min-height: 20px;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                    font-size: 20px;
+                    font-weight: bold;
+                    margin-bottom: 40px;
+                }
+
+                .createReviewDescText {
+                    min-height: 16px;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                    font-size: 16px;
+                    margin-bottom: 20px;
+                }
+
+                .createReviewTextarea {
+                    height: 100px;
+                    min-height: 100px;
+                    max-height: 100px;
+                    min-width: 100%;
+                    max-width: 100%;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    border-bottom: 1px solid rgba(160, 160, 160, 0.2);
+                    font-size: 16px;
+                    margin-bottom: 40px;
+                }
+
+                .createReviewRatingsContainer {
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+                    .createReviewRatingsContainerLeft {
+                        height: 100%;
+                        width: 50%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        align-items: center;
+                    }
+
+
+                    .createReviewRatingsContainerRight {
+                        height: 100%;
+                        width: 50%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        align-items: center;
+                    }
+
+                        .createReviewRatingContainer {
+                            height: 30%;
+                            width: 100%;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                        }
+
+                            .createReviewRatingContainerTitle {
+                                min-height: 14px;
+                                width: 100%;
+                                display: flex;
+                                flex-direction: row;
+                                justify-content: flex-start;
+                                align-items: center;
+                                font-size: 14px;
+                                font-weight: bold;
+                            }
+
+                            .createReviewRatingContainerIncrement {
+                                height: 100%;
+                                width: 100%;
+                                display: flex;
+                                flex-direction: row;
+                                justify-content: center;
+                                align-items: center;
+                            }
+
+                            .createReviewRatingIconContainer {
+                                min-height: 32px;
+                                min-width: 32px;
+                                border-radius: 50%;
+                                background-color: rgba(235, 235, 235, 0.2);
+                                border: 1px solid rgba(160, 160, 160, 0.4);
+                                display: flex;
+                                flex-direction: row;
+                                justify-content: center;
+                                align-items: center;
+                                cursor: pointer;
+                                margin-left: 20px;
+                                margin-right: 20px;
+                            }
+
+                            .createReviewRatingIcon {
+                                font-size: 18px;
+                            }
+
+                .createReviewSubmitButtonContainer {
+                    min-height: 50px;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-end;
+                    align-items: center;
+                    margin-top: 25px;
+                }
+
+                .createReviewSubmitButton {
+                    height: 40px;
+                    min-width: 80px;
+                    border-radius: 5px;
+                    background-color: var(--black);
+                    color: white;
+                    cursor: pointer;
+                    padding: 10px 20px;
+                }
+
+                .createReviewSubmitButton2 {
+                    height: 40px;
+                    min-width: 80px;
+                    border-radius: 5px;
+                    background-color: rgb(74, 213, 127);
+                    color: white;
+                    cursor: pointer;
+                    padding: 10px 20px;
+                }
+
+        .listingBodyReviewsHeaderContainerRightButton {
+            height: 40px;
+            min-width: 100px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            background-color: white;
+            border-radius: 5px;
+            padding: 10px 20px;
+            cursor: pointer;
+            border: 1px solid rgba(165, 165, 165, 0.4);
+            transition: 0.1s linear;
+        }
+
+        .listingBodyReviewsHeaderContainerRightButton:hover {
+            transition: 0.1s linear;
+            background-color: rgba(205, 204, 204, 0.2)
+        }
 
             .listingBodyReviewContainer2 {
                 height: 100%;
