--- a/client/src/Components/Pages/HostingDashboard.css
+++ b/client/src/Components/Pages/HostingDashboard.css
@@ -7,6 +7,15 @@
     align-items: center;
 }
 
+.homeBodySpinnerContainer2 {
+    height: 300px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
     .hostingDashboardHeaderContainer {
         height: 70px;
         width: 100%;
