--- a/client/src/Components/Sub-Components/HomeBody.css
+++ b/client/src/Components/Sub-Components/HomeBody.css
@@ -8,3 +8,14 @@
     gap: 20px;
     margin-bottom: 20px;
 }
+
+.homeBodySpinnerContainer {
+    min-height: calc(100vh - 260px);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 200px;
+}
