--- a/client/src/Components/Sub-Components/HomeHeader.css
+++ b/client/src/Components/Sub-Components/HomeHeader.css
@@ -89,7 +89,7 @@
     width: 350px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
     position: absolute;
     left: 210px;
@@ -98,6 +98,7 @@
     border-radius: 20px;
     overflow-y: auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding-top: 15px;
 }
 
 .homeHeader2SearchDropdownCalendarsContainer {
@@ -263,6 +264,7 @@
         color: var(--black);
         padding: 10px 30px;
         cursor: pointer;
+        margin-bottom: 15px;
     }
 
     .homeHeader2SearchDropdownPlaceContainer:hover {
