--- a/client/src/Components/Sub-Components/ProfileListingCard.css
+++ b/client/src/Components/Sub-Components/ProfileListingCard.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    z-index: 10;
 }
 
     .profileListingCardPic {
@@ -16,6 +17,7 @@
         align-items: center;
         object-fit: cover;
         border-radius: 10px;
+        cursor: pointer;
     }
 
     .profileListingInfoContainer {
@@ -28,7 +30,7 @@
     }
 
         .profileListingReviewsContainer {
-            height: 40%;
+            height: 50%;
             width: 100%;
             display: flex;
             flex-direction: row;
@@ -55,11 +57,12 @@
 
 
         .profileListingTitle {
-            height: 60%;
+            height: 50%;
             width: 100%;
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
             align-items: center;
             font-size: 15px;
+            cursor: pointer;
         }
