--- a/client/src/Components/Sub-Components/HomeHeader.css
+++ b/client/src/Components/Sub-Components/HomeHeader.css
@@ -41,6 +41,22 @@
     position: relative;
 }
 
+.homeSearch2ResetButton {
+    height: 45px;
+    min-width: 80px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    background-color: var(--pink);
+    color: white;
+    font-weight: bold;
+    padding: 10px 20px;
+    margin-left: 20px;
+    cursor: pointer;
+}
+
 .homeHeader2SearchDropdownBackdrop {
     position: absolute;
     top: 100px;
