--- a/client/src/Components/Sub-Components/ListingCard.css
+++ b/client/src/Components/Sub-Components/ListingCard.css
@@ -59,6 +59,10 @@
                 color: var(--pink);
             }
 
+            .saved {
+                color: var(--pink);
+            }
+
         .listingCardArrowsContainer {
             height: 60%;
             width: 100%;
