--- a/client/src/Components/Sub-Components/ListingBody.css
+++ b/client/src/Components/Sub-Components/ListingBody.css
@@ -281,7 +281,7 @@
                     background-color: rgba(165, 165, 165, 0.1);
                 }
 
-                    .fa-regular.fa-heart.listingBodySaveHeart {
+                    .fa-solid.fa-heart.listingBodySaveHeart {
                         font-size: 15px;
                         margin-right: 7px;
                     }
